syntax = "proto3";

option go_package = "pb";

service TheGame {
    rpc Game(stream Controls) returns (stream GameState) {}
}

message Controls {
    bool accelerate = 1;
    double acceleration_direction = 2;
    bool shoot = 3;
    double shoot_direction = 4;
    repeated Ability level_up = 5;
}

message GameState {
    string response = 1;
}

enum Ability {
    unused = 0;
    health_regen = 1;
    max_health = 2;
    body_damage = 3;
    bullet_speed = 4;
    bullet_penetration = 5;
    bullet_damage = 6;
    bullet_reload = 7;
    movement_speed = 8;
}
